# clipocr

./: .env.example  .gitignore  Makefile  README.md  cli.py  core.py  pyproject.toml
clipgpt_ocr/: __init__.py  core.py
prompts/: default.txt
